<resources>
    <string name="app_name" translatable="false">StreetArtView</string>
    <string name="map_fragment_pager_label">Map</string>
    <string name="list_fragment_pager_label">Gallery</string>
    <string name="favourites_fragment_pager_label">Favorites</string>

    <string name="share">Share</string>
    <string name="toast_sort_by_date">Sort by date</string>
    <string name="toast_sort_by_distance">Sort by distance</string>

    <string name="title_activity_image_view" translatable="false">ImageViewActivity</string>
    <string name="title_activity_add_art_object">AddArtObjectActivity</string>

    <!-- pick image activity-->
    <string name="action_path">Path</string>
    <string name="camera">Camera</string>
    <string name="pictures">Pictures</string>
    <string name="non_empty_photo">Photo must be non-empty</string>
    <!-- fill activity-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="return_address">Return address</string>
    <string name="save">Save</string>
    <string name="locate">Locate</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="non_empty_address">Address must be non-empty</string>

</resources>
