<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_path"
        android:title="@string/action_path"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_camera"
                android:orderInCategory="100"
                android:title="@string/camera"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_pictures"
                android:orderInCategory="101"
                android:title="@string/pictures"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_proceed"
        android:icon="@drawable/ic_forward_white_48dp"
        app:showAsAction="always"/>
</menu>